reign_derive/tests/ui/compile_fail/primary_key.stderr
error: unable to find column `email` used for primary key
  --> $DIR/primary_key.rs:13:25
   |
13 | #[model(primary_key(id, email))]
   |                         ^^^^^
